--- a/replugin-host-library/build.gradle
+++ b/replugin-host-library/build.gradle
@@ -18,7 +18,7 @@
 
 buildscript {
     repositories {
-        jcenter()
+        jcenter(){url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         mavenCentral()
     }
     dependencies {
@@ -30,7 +30,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        jcenter(){url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         mavenCentral()
     }
 }
